--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "dompurify": "^3.2.6",
     "framer-motion": "^12.23.12",
     "jose": "^6.1.0",
